Add self-description callbacks for MatchResult in Diff
This commit introduces a new capability to MatchResult class, enabling
it to hold self-description class to be used in diff reporting. A
new DiffDescriptionLine class has been introduced to allow a gradual opt
in to diff reporting using the new DiffDescription class.

This enhancement impacts the WeightedAggregateMatchResult,
MemoizingMatchResult and EagerMatchResult classes as they now can take
an optional DiffDescription class.  All existing APIs should have
remained the same.